# bachelorarbeit_init_deep_rl

./: README.md  global_logging.csv
PARAMETER_INITIALIZATION_DEEP_RL/: LICENSE  README.md  setup.cfg
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl/: module.py
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl/common/: analyze.py  evaluate.py  helpers.py  init.py  policies.py
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl/models/dqn/: policies.py
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl/models/sac/: policies.py
PARAMETER_INITIALIZATION_DEEP_RL/parameter_initialization_deep_rl/models/td3/: policies.py
analyze_results/: analyze.ipynb
experiment_part2/: create_plots.ipynb  pretraining_dqn_naive.ipynb  pretraining_ppo_expert.ipynb
experiment_part2/logs/a2c/bc_expert/: avg_perf_across_seeds.npz  avg_perf_eval_trials.npz  perf_score.npz
experiment_part2/logs/a2c/bc_naive/: avg_perf_across_seeds.npz  avg_perf_eval_trials.npz  perf_score.npz
experiment_part2/logs/a2c/standard/: avg_perf_across_seeds.npz  avg_perf_eval_trials.npz  perf_score.npz
experiment_part2/logs/dqn/bc_expert/: avg_perf_across_seeds.npz  avg_perf_eval_trials.npz  perf_score.npz  zero_scores.npz
experiment_part2/logs/dqn/bc_naive/: avg_perf_across_seeds.npz  avg_perf_eval_trials.npz  perf_score.npz  zero_scores.npz
train_agents/: example.ipynb
(+181 files in other folders)
