[metadata]
name = parameter_initialization_deep_rl
version = 0.0.8
author = David Pauschert
author_email = david.pauschert@gmail.com
description = Testing the impact of neural net parameter initialization on agent performance in deep reinforcement learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True